<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_container_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_14sdp"
    android:layout_marginBottom="@dimen/_12sdp"
    android:backgroundTint="#FFF6F1"
    app:cardCornerRadius="@dimen/_6sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp">

        <TextView
            android:id="@+id/txt_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:fontFamily="@font/inter_medium"
            android:text="@string/ma_donhang"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:fontFamily="@font/inter_regular"
            android:text="#1921681111"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorTextSecond"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/inter_medium"
            android:text="@string/time_dathang"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toBottomOf="@id/txt_order_id"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:fontFamily="@font/inter_regular"
            android:text="20:00:00 10/10/2023"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorTextSecond"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_order_time"
            app:layout_constraintBottom_toBottomOf="@id/txt_order_time"/>

        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="#838383"
            app:layout_constraintTop_toBottomOf="@id/tv_order_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_order_clientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/inter_medium"
            android:text="Nguyễn Văn A"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/view_line"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:fontFamily="@font/inter_semibold"
            android:text="Chờ xác nhận"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_order_clientName"
            app:layout_constraintBottom_toBottomOf="@id/tv_order_clientName"/>

        <ListView
            android:id="@+id/listView_order_items"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:clipToPadding="false"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="@dimen/_4sdp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/txt_total_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order_clientName" />

        <TextView
            android:id="@+id/txt_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/tong_tien"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/listView_order_items"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_order_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/inter_medium"
            android:text="110.000đ"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@id/txt_total_price"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_detail_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xem_chi_tiet"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_total_price"
            app:layout_constraintBottom_toBottomOf="@id/tv_order_payment"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>